--- a/src/app/modules/commons/cnil/cnil.html
+++ b/src/app/modules/commons/cnil/cnil.html
@@ -1,5 +1,5 @@
 <div class="container cnil-main">
-    <div class="row colorMain white-text">
+    <div class="row defaut-primary-color">
         <div class="col s2">&nbsp;</div>
         <div class="col s8 center-align">
             <h5>Politique de gestion des cookies</h5>
