--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -4,35 +4,7 @@
     <div class="row hide-on-med-and-down"></div>
 
     <!-- Entete -->
-    <div class="row dark-primary-color center valign-wrapper hide-on-med-and-down">
-        <div class="col m1">
-            <i class="material-icons md-48 accent-text-color ">verified_user</i>
-        </div>
-        <div class="col m9 left-align">
-            <h5 translate="billingPage.title"></h5>
-        </div>
-
-        <div class="col m2">
-            <button class="btn accent-color right" ng-click="doTheBack()"
-                    translate="commons.buttons.back"></button>
-        </div>
-    </div>
-
-
-    <!-- Entete -->
-    <div class="row light-primary-color center hide-on-large-only">
-        <div class="col s12">&nbsp;</div>
-
-        <div class="col s12">
-            <h5 translate="billingPage.title"></h5>
-        </div>
-
-        <div class="col s12">&nbsp;</div>
-        <div class="col s12">
-            <button class="btn accent-color" ng-click="doTheBack()" translate="commons.buttons.back"></button>
-        </div>
-        <div class="col s12">&nbsp;</div>
-    </div>
+    <title-page-bar icon="verified_user" title="billingPage.title"></title-page-bar>
 
     <!-- Large view-->
     <div class="row hide-on-med-and-down">
