--- a/src/app/modules/commons/users/signup/signupEndDone.html
+++ b/src/app/modules/commons/users/signup/signupEndDone.html
@@ -1,4 +1,4 @@
-<div class="container colorMain-text">
+<div class="container primary-text-color">
 <!-- body start-->
     
 	<div class="container">
