--- a/src/app/modules/commons/users/billing/plan.html
+++ b/src/app/modules/commons/users/billing/plan.html
@@ -1,9 +1,9 @@
-<h5 class="light-green-text text-lighten-1" translate="profile.plan.desc"></h5>
+<h5 class="primary-text-color" translate="profile.plan.desc"></h5>
 <div class="col s12 m2 center">
     <avatar person="user" width="'130px'" collection="User"></avatar>
     <h3>{{user.account.login}}</h3>
-    </div>
 </div>
+
 <div class="col s12 m10">
     <table class="highlight responsive-table">
         <thead>
