--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -25,7 +25,7 @@
     
     <div class="row">
         <div class="col s12">
-            <div class="card light-primary-color">
+            <div class="card">
                 <div class="card-content center-align dark-primary-color">
                     <span class="card-content title" translate="profileMainPage.tabs.account"></span>
                 </div>
@@ -68,7 +68,7 @@
             
             
         <div class="col m6 s12">
-             <div class="card light-primary-color">
+             <div class="card">
                 <div class="card-content center-align dark-primary-color">
                     <span class="card-content title">{{'profileMainPage.tabs.sandbox' | translate }}</span>
                 </div>
