--- a/src/app/modules/commons/users/password/pwdUpdate.html
+++ b/src/app/modules/commons/users/password/pwdUpdate.html
@@ -4,20 +4,8 @@
     <div class="row"></div>
 
     <!-- Entete -->
-    <div class="row dark-primary-color center valign-wrapper hide-on-med-and-down">
-        <div class="col m1">
-            <i class="material-icons md-48 accent-text-color ">https</i>
-        </div>
-        <div class="col m9 left-align">
-            <h5 translate="profilePwdPage.title"></h5>
-        </div>
-
-        <div class="col m2">
-            <button class="btn accent-color right" ng-click="doTheBack()"
-                    translate="commons.buttons.back"></button>
-        </div>
-    </div>
-
+    <title-page-bar icon="https" title="profilePwdPage.title"></title-page-bar>
+    
     <div class="row">
         <div class="col s12 card">
 
