--- a/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
+++ b/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
@@ -1,33 +1,21 @@
 <div class="container">
 
     <!-- space between header menu and body-->
-    <div class="row hide-on-med-and-down"></div>
+    <div class="row"><div class="col s12">&nbsp;</div></div>
 
     <!-- Entete -->
-    <div class="row dark-primary-color center valign-wrapper hide-on-med-and-down">
-        <div class="col m1">
-            <i class="material-icons md-48 accent-text-color ">group</i>
-        </div>
-        <div class="col m9 left-align">
-            <h5 translate="sbMemberMngtPage.title"></h5>
-        </div>
-
-        <div class="col m2">
-            <button class="btn accent-color right" ng-click="doTheBack()"
-                    translate="commons.buttons.back"></button>
-        </div>
-    </div>
+    <title-page-bar icon="more" title="sbMemberMngtPage.title"></title-page-bar>
 
     <div class="row">
         
-        <div class="col s12 colorMain-text">
+        <div class="col s12 accent-text-color">
             <h6>{{'sbMemberMngtPage.label.listMember' | translate }}</h6>
         </div>
         
         
         <ul>
             <li class="col l3 m6 s12" ng-repeat="member in sandbox.members">
-                <div class="card light-primary-color">
+                <div class="card">
                     <div class="card-content center-align" style="height:48px;">
                         <span class="card-title primary-text-color">
                             {{member.person.firstname}} {{member.person.name}}
@@ -61,7 +49,7 @@
         </ul>
         <div class="col s12">&nbsp;</div>
         <div class="col s12 divider"></div>
-        <div class="col s10 primary-text-color">
+        <div class="col s10 accent-text-color">
             <h6>{{'sbMemberMngtPage.label.invitePending' | translate }}</h6>
         </div>
         <div class="col s2 center">
