--- a/src/app/modules/commons/users/signup/signupStartDone.html
+++ b/src/app/modules/commons/users/signup/signupStartDone.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col s12">
                     <div class="center icon-block">
-                         <div class="colorAccent-text">
+                         <div class="accent-text-color">
                              <i class="medium material-icons">verified_user</i>
                          </div>
                         <h4 class="center" translate="signupStartDonePage.title"></h4>
