--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -59,6 +59,44 @@
     </div>
 </nav>
 
+<!-- Menu dropdown notifications -->
+<div id='notificationDropdown' class='notification dropdown-content'>
+    
+    <div class="row" style="padding-left: 10px">
+        <div class="col s12">
+            <a href="#/notifications" class="btn-flat primary-text-color">
+            {{'notifications.more' | translate}} <i class="material-icons right">forward</i></a>
+        </div>
+    </div>
+    <div ng-repeat="n in notifications" class="primary-text-color">
+        <div class="row">
+            <div class="col s2">
+                <img ng-src="{{getAvatar(n.senderId.avatar)}}" alt="" class="circle" width="30px">
+            </div>
+            <div class="col s10">
+                <a href="#/notifications/{{n._id}}" class="accent-text-color left" ng-bind-html="n.title"></a>
+                
+                <br/><span class="truncate" ng-bind-html="n.content"></span>
+                <br/>
+                <small> {{n.senderId.firstname}} | {{n.timestamp | date : 'short'}}</small>
+                <br/>
+                <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
+                   class="accent-text-color">
+                    <i class="material-icons left" ng-if="n.read"
+                       title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i>
+                    <i class="material-icons left" ng-if="!n.read"
+                        title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i>
+                </a>
+                <a href="javascript:void(0);" ng-click="deleteNotification(n._id)" class="accent-text-color">
+                    <i class="material-icons left" title="{{'headerMenu.notifications.delete' | translate}}">delete</i>
+                </a>
+                
+            </div>
+            <div class="col s12 divider"></div>
+        </div>
+    </div>
+</div>
+
 <!-- Menu Connected First header-->
 <div class="navbar-fixed" ng-if="user && !user.account.firstConnexion && !notpaid">
     <nav class="top-nav dark-primary-color visible-nav" role="navigation">
@@ -95,8 +133,7 @@
                            data-hover="false">
                             <i class="material-icons right"
                                ng-class="{'accent-text-color activeNotif':notifications.length}">{{notifications.length?'drafts':'email'}}</i>
-                            <span ng-if="notifications.length" class="new badge accent-color"
-                                  ng-bind="notifications.length"></span>
+                            <span ng-if="notifications.length" class="new badge accent-color" ng-bind="notifications.length"></span>
                         </a>
                     </li>
                 </ul>
@@ -279,36 +316,4 @@
     </div>
 </div>
 
-<div id='notificationDropdown' class='notification dropdown-content light-primary-color'>
-    <div class="row" style="padding-left: 10px">
-        <div class="col s12"><a href="#/notifications"
-                                class="waves-effect waves-teal btn-flat blue-grey-text text-darken-2">
-            {{'notifications.more' | translate}} <i class="material-icons right">forward</i></a>
-        </div>
-    </div>
-    <div ng-repeat="n in notifications" class="hoverable blue-grey-text text-darken-2 white">
-        <div class="row">
-            <div class="col s2">
-                <img ng-src="{{getAvatar(n.senderId.avatar)}}" alt="" class="circle" width="30px">
-            </div>
-            <div class="col s10">
-                <a href="#/notifications/{{n._id}}" class="blue-text text-lighten-2" ng-bind-html="n.title"></a>
-                <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
-                   class="waves-effect waves-teal btn-flat right">
-                    <i class="tiny material-icons" ng-if="n.read"
-                       title="{{'headerMenu.notifications.mark-as-unread' | translate}}">visibility_off</i><i
-                        class="tiny material-icons" ng-if="!n.read"
-                        title="{{'headerMenu.notifications.mark-as-read' | translate}}">visibility</i></a>
-                <a href="javascript:void(0);" ng-click="deleteNotification(n._id)"
-                   class="waves-effect waves-teal btn-flat right"><i
-                        class="tiny material-icons" title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
-                <br/><span class="truncate" ng-bind-html="n.content"></span>
-                <small> {{n.senderId.firstname}} {{n.senderId.name}} |
-                    {{n.timestamp | date : 'short'}}
-                </small>
-            </div>
-        </div>
-
-    </div>
-</div>
 <cnil link="/#/cnil" ></cnil>
