Change Sandbox + Bug update event

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -102,7 +102,7 @@
     <nav class="top-nav dark-primary-color visible-nav" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="/#/private/sbSwitch" class="brand-logo center"><span class="truncate">{{meta.sandbox.structure.label}}</span></a>
+                <a href="/#/private/sbSwitch" class="brand-logo center truncate">{{meta.sandbox.structure.label}}</a>
                 <ul class="hide-on-med-and-down">
                     <li class="left">
                         <a href="#/private/"><i class="material-icons left" title="{{'headerMenu.dashboard' | translate}}">home</i></a>
