Bug gestion user sur sb autre

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -222,8 +222,8 @@
             </div>
             <div class="row hide-on-small-only">
                 <div>
-                    <a href="" class="light-primary-color" ng-click="openForgotPwd()">{{'modal.login.label.forgotpasswd' | translate }}</a>
-                    <a class="btn waves-effect waves-white light-primary-color right" ng-click="openSignup()" translate="navbar.signup"></a>
+                    <a href="" class="light-text-color left" ng-click="openForgotPwd()">{{'modal.login.label.forgotpasswd' | translate }}</a>
+                    <a class="secondary-text-color right" ng-click="openSignup()" translate="navbar.signup"></a>
                 </div>
                 
             </div>
