#mant0000012: [PUB-008] Mentions légales : Choix de menu actif

--- a/src/app/modules/public/legal.html
+++ b/src/app/modules/public/legal.html
@@ -1,12 +1,7 @@
 <div id="index-banner" class="colorMain-text">
-    <div class="section no-pad-bot hero-signup">
-        <div class="colorBckgModal white-text center-align">
-            <h1 class="title hide-on-small-only" translate="landing.legals"></h1>
-
-            <h2 class="title hide-on-med-and-up" translate="landing.legals"></h2>
-        </div>
+    <div class="col s12  center-align">
+        <h2 class="title" translate="landing.legals"></h2>
     </div>
-
     <div class="row">&nbsp;</div>
     <div class="container">
         <h3>1. Présentation du site.</h3>
@@ -17,7 +12,7 @@
         </p>
 
         <p>
-            <strong>Propriétaire</strong> : Qaobee – SARL – 45 allée parc ar groas, 29280 Plouzane, France<br/> <strong>Créateur</strong>
+            <strong>Propriétaire</strong> : Qaobee – SARL – 45 allée parc ar groas, 29280 Plouzané, France<br/> <strong>Créateur</strong>
             : <a href="www.qaobee.com">Qaobee</a><br/> <strong>Responsable
             publication</strong> : Qaobee – <a href="mailto:contact@qaobee.com">contact@qaobee.com</a><br/>
             <strong>Webmaster</strong> : Qaobee – <a href="mailto:contact@qaobee.com">contact@qaobee.com</a><br/>
