#mant0000012: [PUB-008] Mentions légales : Choix de menu actif

--- a/src/app/modules/public/legal.html
+++ b/src/app/modules/public/legal.html
@@ -1,4 +1,4 @@
-<div id="index-banner" class="colorMain-text">
+<div id="index-banner" class="colorMain-text legal">
     <div class="col s12  center-align">
         <h2 class="title" translate="landing.legals"></h2>
     </div>
